<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:id="@+id/group_profile" android:checkableBehavior="single">
        <item
            android:id="@+id/nav_profiles"
            android:icon="@drawable/ic_menu_profile"
            android:title="@string/menu_profiles" />
    </group>

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_egress"
            android:icon="@drawable/ic_menu_egress"
            android:title="@string/menu_egress" />
        <item
            android:id="@+id/nav_advanced"
            android:icon="@drawable/ic_menu_advanced"
            android:title="@string/menu_advanced" />
        <item
            android:id="@+id/nav_about"
            android:icon="@drawable/ic_menu_about"
            android:title="@string/menu_about" />
        <item
            android:id="@+id/nav_docs"
            android:icon="@drawable/ic_menu_docs"
            android:title="@string/menu_docs" />
    </group>
</menu>