<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">


    <fragment
        android:id="@+id/nav_home"
        android:name="io.netbird.client.ui.home.HomeFragment"
        android:label=""
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_advanced"
        android:name="io.netbird.client.ui.advanced.AdvancedFragment"
        android:label="@string/menu_advanced"
        tools:layout="@layout/fragment_advanced" />

    <fragment
        android:id="@+id/nav_about"
        android:name="io.netbird.client.ui.about.AboutFragment"
        android:label="@string/menu_about"
        tools:layout="@layout/fragment_about" />

    <fragment
        android:id="@+id/nav_profiles"
        android:name="io.netbird.client.ui.profile.ProfilesFragment"
        android:label="@string/menu_profiles"
        tools:layout="@layout/fragment_profiles" />

    <fragment
        android:id="@+id/nav_setup"
        android:name="io.netbird.client.ui.setup.SetupFragment"
        android:label="@string/setup_connect"
        tools:layout="@layout/fragment_setup" />

    <fragment
        android:id="@+id/nav_egress"
        android:name="io.netbird.client.ui.egress.EgressFragment"
        android:label="@string/menu_egress"
        tools:layout="@layout/fragment_egress" />
</navigation>